--- a/app/views/replies/edit.html.erb
+++ b/app/views/replies/edit.html.erb
@@ -1,6 +1,8 @@
 <h1>Editing reply</h1>
 
-<%= render 'form' %>
+<%= error_messages_for :reply %>
 
-<%= link_to 'Show', @reply %> |
+<%= render :partial => @reply, :locals => { :button_name => "Submit" } %>
+
+<%= link_to 'Show', [@topic, @reply] %> |
 <%= link_to 'Back', replies_path %>
